buildscript {
    ext {
    }
    repositories {
        mavenLocal()
        mavenCentral()
        maven { url = "https://plugins.gradle.org/m2/" }
    }
}
allprojects {
    apply plugin: "idea"
    apply plugin: "java"
}
group = 'org.tests'
version = '1.0'
java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}
repositories {
    mavenCentral()
    maven {
        url = "https://plugins.gradle.org/m2/"
    }
    maven { url = "https://mvnrepository.com/" }
    maven { url = "https://mvnrepository.com/artifact/" }

}

dependencies {
    //apache
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
    //gson
    implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.7'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.10.0'
    testImplementation group: 'org.junit.platform', name: 'junit-platform-runner', version: '1.10.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.2'

}

jar {
    manifest {
        attributes 'Main-Class': 'org.tests.Main'
    }
    version = '0.1.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
